# ShaderPermute

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: cmake.yml
ShaderPermute/: CMakeLists.txt  ShaderPermute.cpp  ShaderPermute.h  ShaderPermute.hpp  ShaderPermuteTest.cpp  basicTest.json  test
ShaderPermute/ShaderPermuteTest/: CMakeLists.txt  ShaderPermuteTest.cpp  basicTest.json  lightPassVert.json
